# ai-excel-helper

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .prettierrc  .test_db_state.json  1870B封固底.btw  ALEMBIC_MIGRATION_GUIDE.md  CHANGELOG.md  DATABASE_FIX_SUMMARY.md  DATABASE_HEALTH_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_REPORT.md  Dockerfile  LABEL_TEMPLATE_GUIDE.md  LICENSE  MID_TERM_OPTIMIZATION_GUIDE.md  MID_TERM_OPTIMIZATION_SUMMARY.md  OPTIMIZATION_IMPLEMENTATION_GUIDE.md  OPTIMIZATION_QUICKREF.md  OPTIMIZATION_STATUS_SUMMARY.md  Open-FHD-Cmd-here.bat  PRINT_TASKS.md  README.md  README_TEMPLATE.md  ROUTE_FIX_REPORT.md  SECURITY.md  TEST_FINAL_REPORT.md  TEST_QUICK_REFERENCE.md  TEST_REPORT.md  TEST_SUMMARY.md  VERSION.md  WINDOWS-TERMINAL.txt  _cmp3.txt  _cmp3b.txt  _generate_modern_pdf.py  _generate_pdf_fpdf.py  alembic.ini  auto_migrate_database.py  (+187 more)
.cursor/: mcp_wechat_example.json  微信PC版-MCP配置说明.md  深圳市百木鼎家具有限公司_3884e959_销售合同.docx
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
424/: 惠州市枫驰家具有限公司.csv  惠州市鸿瑞达家具有限公司.csv  深圳市百木鼎家具有限公司.csv  转 Word_扫描全能王 11.04.26 13.22.docx  转 Word_扫描全能王 11.04.26 13.31.docx  转 Word_扫描全能王 11.04.26 19.52(1).docx  销售合同_深圳市百木鼎家具有限公司_20260412_191117.docx
AI助手/: 8520F哑光白面.btw  add_test_orders.py  advanced_printer_diagnosis.py  ai_augmented_parser.py  ai_conversation_engine.py  analyze_25_shipment_layout.py  analyze_database_issues.py  analyze_excel_data.py  analyze_excel_file.py  analyze_excel_products.py  analyze_excel_structure.py  analyze_labels_disappeared.py  analyze_new_excel.py  analyze_new_excel_structure.py  analyze_new_order_format.py  analyze_ruixin_customers.py  analyze_sheet1.py  analyze_sheet2.py  analyze_unit_confusion.py  app_api.py  (+425 more)
MODstore/: .gitignore  pyproject.toml  start-modstore.bat
MODstore/modman/: blueprint_scan.py  cli.py  constants.py  db_bundle.py  fhd_shell_export.py  repo_config.py  scaffold.py  surface_bundle.py
MODstore/modman/data/: extension_surface.json
MODstore/modstore_server/: __init__.py  __main__.py  app.py  authoring.py  constants.py  file_safe.py
MODstore/templates/skeleton/: manifest.json
MODstore/templates/skeleton/backend/: __init__.py  blueprints.py
MODstore/templates/skeleton/frontend/: routes.js
MODstore/web/: index.html  package-lock.json  package.json  vite.config.js
MODstore/web/src/: App.vue  api.js
MODstore/web/src/copy/: zhIntro.js
MODstore/web/src/i18n/: fieldKind.js  index.js
MODstore/web/src/locales/: en-US.js  zh-CN.js
MODstore/web/src/router/: index.js
MODstore/web/src/utils/: blueprintLabels.js
MODstore/web/src/views/: AuthorView.vue  DebugView.vue  HomeView.vue  ModDetailView.vue  NotFoundView.vue  SettingsView.vue
xcagi-mod-manager/: .gitignore  pyproject.toml  start-modrepo-web.bat
xcagi-mod-manager/modman/: __init__.py  __main__.py  cli.py  manifest_util.py  repo_config.py  store.py
xcagi-mod-manager/modrepo-ui/: index.html  package-lock.json  package.json  vite.config.js
xcagi-mod-manager/modrepo-ui/src/: App.vue  api.js  style.css
xcagi-mod-manager/modrepo-ui/src/router/: index.js
xcagi-mod-manager/modrepo-ui/src/views/: HomeView.vue  ModDetailView.vue  SettingsView.vue
xcagi-mod-manager/modrepo_server/: __init__.py  __main__.py  app.py
xcagi-mod-manager/templates/skeleton/frontend/views/: HomeView.vue
(+1710 files in other folders)
